--- a/blocks/experience/_index.scss
+++ b/blocks/experience/_index.scss
@@ -2,52 +2,78 @@
     padding-top: var(--padding);
     padding-bottom: var(--padding);
     // border-top: 1px solid (var(--color-gray-dark));
-    margin-top: 5rem;
-
 }
 
 .experience-block__description {
-    grid-column: 4/8;
-    grid-row: 1/2;
+    width: calc(2 * (100% / 3));
+    width: 100%;
+
+    *,
+    p {
+        font-size: var(--font-size-3);
+        font-weight: 500;
+    }
+}
+
+.experience-list__wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 2rem;
+    margin-top: 2rem;
+
+    border-top: 1px solid var(--color-text-gray);
+    padding: 3rem 0;
+}
+
+.experience-list__name {
+    grid-column: 1/2;
 }
 
 .experience-list {
-    display: flex;
-    flex-direction: column;
-    gap: 7rem;
-    grid-column: 4/8;
-    grid-row: 2/3;
-    margin-top: 2rem;
+    width: 100%;
+    grid-column: 2/4;
+
+    .experience-item:not(:first-child) {
+        border-top: 1px solid var(--color-text-gray);
+        padding: 3rem 0 0;
+    }
 }
 
 .experience-item {
     position: relative;
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    padding-bottom: 3rem;
 }
 
-.experience-item__top {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
+.experience-item__title {
+    display: grid;
+    grid-template-columns: 2.5rem 1fr;
+    grid-column: 1/2;
+    grid-row: 1/2;
 }
 
-.experience-item__top__title {
-    display: flex;
-    flex-direction: column;
+.experience-item__title-content {
+    margin-left: 1rem;
 }
 
 .experience-item__img {
     border-radius: 100px;
     object-fit: cover;
-    width: 4rem;
-    height: 4rem;
+    width: 2.5rem;
+    height: 2.5rem;
     background-color: aliceblue;
 
     // position: absolute;
     // left: -5rem;
     // top: .5rem;
+
+    grid-column: 1/2;
+    grid-row: 1/2;
+
 }
 
 
@@ -55,87 +81,71 @@
 .experience-item__company {
     font-size: var(--font-size-1);
     font-weight: var(--font-weight-regular);
-    margin-top: .3rem;
+    // grid-column: 2/3;
+    // grid-row: 1/2;
+
 }
+
+
 
 .experience-item__position {
     font-size: var(--font-size-1);
     font-weight: var(--font-weight-regular);
-    margin-top: .3rem;
     // margin-top: .7rem;
+    // grid-column: 2/3;
+    // grid-row: 1/2;
+
 }
 
 .experience-item__content {
-    display: flex;
-    flex-direction: column;
     width: 100%;
     position: relative;
+    grid-column: 2/3;
+    grid-row: 1/2;
 }
 
 .experience-item__year {
     font-size: var(--font-size-0);
     font-weight: var(--font-weight-regular);
+
+    margin-top: .3rem;
+    color: var(--color-text-gray);
+
+    // grid-column: 2 / 3;
+    // grid-row: 1 / 1;
+    margin-top: .4rem;
+
 }
 
 .experience-item__description {
     font-size: var(--font-size-1);
     font-weight: var(--font-weight-regular);
     color: var(--color-text-gray);
-    margin-top: .5rem;
-    // width: 50%;
+    margin-top: .4rem;
 }
 
 @media screen and (max-width: 1600px) {
-    .experience-block__description {
-        grid-column: 3/8;
-    }
-
-    .experience-list {
-        grid-column: 3/8;
-    }
+    
 }
 
 @media screen and (max-width: 1220px) {
-    .experience-block__description {
-        grid-column: 2/8;
-    }
 
-    .experience-list {
-        grid-column: 2/8;
-    }
+}
+@media screen and (max-width: 1024px) {
+  .experience-list__wrapper{
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+  }
 }
 
 @media screen and (max-width: 767px) {
-    .experience-block__description {
-        grid-column: 1/13;
-    }
 
-    .experience-list {
-        grid-column: 1/13;
-        margin-top: 2rem;
-        gap: 4rem;
-    }
-
-    .experience-item {
+}
+@media screen and (max-width: 480px) {
+    .experience-item{
+        display: flex;
         flex-direction: column;
-        gap: 1rem;
-    }
-
-    .experience-item__company {
-        margin-top: 0;
-    }
-
-    .experience-item__year {
-    }
-
-    .experience-item__img {
-        width: 3.5rem;
-        height: 3.5rem;
-        top: 0rem;
-        left: -4.5rem;
-
-        top: 0rem;
-        left: 0;
-        position: relative;
+        gap: 1.2rem;
     }
 }
