--- a/blocks/section__post-list__big/_index.scss
+++ b/blocks/section__post-list__big/_index.scss
@@ -2,7 +2,6 @@
     position: relative;
     z-index: 1;
     // border-top: 1px solid var(--color-gray-dark);
-    margin-top: 10rem;
     gap: 0;
 
     .post-card__big {
@@ -27,41 +26,37 @@
 
 }
 
-.cards {
+.cards,
+.section__post-list__big__animation {
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 70vh;
     margin-bottom: 90px;
+
+    .custom-card {
+        position: absolute;
+        width: calc(100% - calc(2 * 2.5 * var(--padding)));
+        top: 0px;
+        height: auto;
+        margin-bottom: 50px;
+    }
+
+    .card1 {}
+
+    .card2 {
+        top: 40px;
+    }
+
+    .card3 {
+        top: 80px;
+    }
+
+
 }
 
-.custom-card {
-    position: absolute;
-    width: calc(100% - calc(2 * 2.5 * var(--padding)));
-    top: 0px;
-    // height: 70vh;
-    height: auto;
-    margin-bottom: 50px;
-    // background-color: #213F29;
-    // color: #FAEBBB;
-    // display: flex;
-    // justify-content: center;
-    // align-items: center;
-    // border-radius: 50px;
-    // box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.2);
-    // aspect-ratio: 18.2/9;
-}
 
-.card1 {}
-
-.card2 {
-    top: 40px;
-}
-
-.card3 {
-    top: 80px;
-}
 
 .opacity {
     -moz-transition: 0.4s ease;
@@ -93,40 +88,37 @@
     }
 }
 
-@media screen and (max-width: 1220px) {
-    .section__post-list__big {
-        grid-column: 2/13;
-        gap: 5rem;
-    }
+@media screen and (max-width: 1024px) {
 
-    .section__post-list__big__wrapper {
+    .section__post-list__big {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        max-width: 100%;
+
+        align-items: stretch;
+        flex-direction: row;
+        scrollbar-width: none;
+        overflow-y: hidden;
+        overflow-x: scroll;
+
+        padding: 0;
+
+        gap: 2rem;
 
         .post-card__big {
-            border-bottom: 0;
-
-            &:not(:first-child) {
-                padding-top: 0;
+            &:first-child {
+                margin-left: var(--padding);
             }
 
-            &:first-child {
-                border-top: 0;
+            &:last-child {
+                margin-right: var(--padding);
+
             }
         }
-
     }
-
 }
 
-@media screen and (max-width: 767px) {
-    .section__post-list__big__wrapper {
-        padding: 0;
-        margin-top: 3rem;
+@media screen and (max-width: 1220px) {}
 
-    }
-
-    .section__post-list__big {
-        grid-column: 1/13;
-        gap: 4rem;
-    }
-
-}
+@media screen and (max-width: 767px) {}
