--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -30,8 +30,8 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 1.5rem 1rem;
-    padding: 1.5rem var(--padding);
+    // padding: 1.5rem 1rem;
+    padding: 1.5rem calc(2.5 * var(--padding));
     // border-bottom: 1px solid var(--color-gray-dark);
     position: sticky;
     top: 0;
@@ -68,7 +68,7 @@
     transition: transform .5s;
     z-index: 80;
 
-    box-shadow: 0px 15px 30px 0px #000000b3;
+    box-shadow: 0px 15px 30px 0px rgb(0 0 0 / 52%);
     overflow-y: auto;
 
     padding-top: 4.5rem;
@@ -94,7 +94,7 @@
         a {
             display: inline-block;
             width: 100%;
-            padding: var(--padding);
+            padding: var(--padding) calc(2.5 * var(--padding));
             color: var(--color-text-primary);
             text-decoration: none;
             font-size: var(--font-size-4);
@@ -261,6 +261,18 @@
     }
 }
 
+@media screen and (max-width: 1024px) {
+    .header__top {
+        padding: 1.5rem var(--padding);
+    }
+
+    .header__burger__menu .header__burger__links {
+        a {
+            padding: var(--padding);
+        }
+    }
+}
+
 @media screen and (max-width: 767px) {
     .header {
         border: 0;
@@ -275,7 +287,6 @@
     }
 
     .header__top {
-        padding: 1rem var(--padding);
         height: 54px;
         position: fixed;
         // border-bottom: 0;
