--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -203,7 +203,8 @@ div {
         width: 100%;
         height: 100%;
         position: relative;
-        display: inline-block;
+        // display: inline-block;
+        display: flex;
     }
 
     .f-carousel__nav button {
@@ -441,7 +442,7 @@ footer {
 
     &._big {
         padding: 1.1rem 0.62rem;
-        border-radius: .3rem;
+        // border-radius: .3rem;
     }
 
     &:hover {
