--- a/components/post-card/post-card.scss
+++ b/components/post-card/post-card.scss
@@ -17,7 +17,7 @@
         width: 100%;
         height: auto;
         aspect-ratio: 4/3;
-        border-radius: .5rem;
+        // border-radius: .5rem;
     }
 }
 
