--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -1,7 +1,7 @@
 .post-card__big {
-    display: grid;
-    grid-template-columns: repeat(12, 1fr);
-    gap: var(--grid-gap);
+    // display: grid;
+    // grid-template-columns: repeat(12, 1fr);
+    // gap: var(--grid-gap);
     // gap: 0;
     position: relative;
     height: fit-content;
@@ -12,12 +12,13 @@
 
 
     // border-top: 1px solid var(--color-gray-dark);
-    border: 1px solid #212121;
-    border-radius: calc(1rem + 5px);
+    // border: 1px solid #212121;
+    // border-radius: calc(1rem + 5px);
     overflow: visible;
     overflow: hidden;
 
     padding: 5px;
+    box-shadow: 0px -13px 20px #00000059;
 }
 
 
@@ -27,28 +28,34 @@
     align-items: flex-start;
     justify-content: space-between;
     flex-direction: column;
-    grid-column: 9 / 13;
+    // grid-column: 9 / 13;
     position: relative;
     z-index: 10;
     // padding: 20px;
     // padding: 0 0 0 var(--padding);
-    gap: 2rem;
+    // gap: 2rem;
     // gap: 1rem;
     // background-color: var(--color-background-card);
     height: fit-content;
     height: 100%;
     // border-radius: 1rem;
-    padding: 1.5rem 1.5rem 1.5rem 0;
+    padding: 1.5rem;
+
+    pointer-events: none;
 }
 
 .post-card__big__content {
-    display: flex;
-    align-items: flex-start;
-    justify-content: flex-start;
+    display: grid;
+    // align-items: flex-start;
+    // justify-content: flex-start;
     flex-direction: column;
     gap: 1.5rem;
     position: relative;
     z-index: 5;
+    width: 100%;
+    height: 100%;
+    align-content: space-between;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
 .post-card__big__title {
@@ -65,16 +72,21 @@
     line-height: var(--font-size-1);
     z-index: 10;
 
+    grid-column: 1/2;
+    grid-row: 1/1;
+
     &._mobile {
         padding: var(--padding);
     }
 }
 
 .post-card__big__short-description {
-    display: -webkit-box;
-    -webkit-line-clamp: 6;
-    -webkit-box-orient: vertical;
-    overflow: hidden;
+    // display: -webkit-box;
+    // -webkit-line-clamp: 6;
+    // -webkit-box-orient: vertical;
+    // overflow: hidden;
+    grid-column: 1/2;
+    grid-row: 2/3;
 
     * {
         color: var(--color-text-primary);
@@ -89,15 +101,20 @@
     flex-direction: column;
     gap: 0px;
     width: 100%;
+
+    grid-row: 1/2;
+    grid-column: 3/4;
+
+    text-align: right;
 }
 
 .post-card__big__meta__item {
-    display: grid;
-    grid-template-columns: 1fr 3fr;
-    gap: 22px;
+    // display: grid;
+    // grid-template-columns: 1fr 3fr;
+    // gap: 22px;
 
-    border-top: 1px solid var(--color-gray-dark);
-    padding: 10px 0px;
+    // border-top: 1px solid var(--color-gray-dark);
+    padding: .2rem 0px;
     width: 100%;
 
     * {
@@ -106,6 +123,7 @@
 }
 
 .post-card__big__meta__item__variable {
+    display: none;
     color: var(--color-secondary);
 }
 
@@ -116,6 +134,8 @@
     flex-direction: row;
     gap: 8px;
     position: relative;
+
+    display: none;
 }
 
 .post-card__meta__team__images__wrapper {
@@ -194,8 +214,7 @@
     // left: calc(-1 * var(--padding));
     bottom: 0;
     z-index: 0;
-    filter: blur(60px);
-    opacity: .1;
+    // opacity: .1;
     overflow: visible;
     width: 100%;
     width: 210%;
@@ -205,6 +224,8 @@
     bottom: 50%;
     right: 50%;
     left: 50%;
+
+    background-color: rgb(18 23 47 / 23%);
     // transform: scale(1.2) translate(-50%, -50%);
     transform: translate(-50%, -50%);
     // mask: linear-gradient(260deg, rgba(0, 0, 0, 0) 10.41138795045045%, rgba(0, 0, 0, 1) 93.1447072072072%) add;
@@ -218,17 +239,21 @@
         height: auto;
         aspect-ratio: 4/3;
         object-fit: cover;
+
+        opacity: .1;
+        filter: blur(60px);
     }
 }
 
 .post-card__big__gallery {
     // padding: 0 var(--padding) 0 0;
-    padding: 5px 0 5px 5px;
+    // padding: 5px 0 5px 5px;
 
-    position: relative;
+    // position: relative;
+    position: absolute;
     width: 100%;
     height: 100%;
-    grid-column: 1 / 9;
+    // grid-column: 1 / 9;
     z-index: 5;
     // &::after{
     //     content: '';
@@ -244,8 +269,8 @@
     .f-carousel {
         // border-radius: 1rem;
         overflow: hidden;
-        border-radius: 1rem;
-
+        height: 100%;
+        // border-radius: 1rem;
     }
 
     .f-carousel.has-dots {
@@ -254,17 +279,19 @@
 
     .f-button {
         top: auto !important;
-        bottom: .5rem;
+        bottom: 1.5rem;
+        bottom: calc(16px + 1.5rem);
+
         // transform: translateY(128%) !important;
         transform: translateY(0) !important;
 
         &.is-prev {
             left: auto !important;
-            right: 3.2rem !important;
+            right: 4.2rem !important;
         }
 
         &.is-next {
-            right: .5rem !important;
+            right: 1.5rem !important;
 
         }
     }
@@ -286,27 +313,73 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
+        height: 100%;
         // height: 100%;
-        aspect-ratio: 4 / 3;
+        // aspect-ratio: 4 / 3;
 
         &:hover {
             opacity: 1;
         }
     }
-}
 
-.post-card__big__gallery__img__source {
-    object-fit: contain;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
+    .f-thumbs {
+        position: absolute;
+        left: 1.5rem;
+        bottom: 1.5rem;
+        width: 100%;
 
-    // &._cover {
-    //     // aspect-ratio: 1 / 1;
-    //     // object-fit: cover;
-    //     width: 100%;
-    //     height: 100%;
-    // }
+        &.is-horizontal {
+
+            .f-thumbs__track {
+                padding: 0;
+            }
+        }
+
+        .f-thumbs__track {
+            // flex-direction: column;
+            padding: 0;
+        }
+
+        .f-thumbs__slide {
+            width: fit-content;
+            max-width: 60px;
+        }
+
+        .f-thumbs__slide__button {
+            width: 100%;
+        }
+
+        .f-thumbs__slide__img {
+            height: auto;
+            margin: auto;
+
+            position: relative;
+
+            height: auto;
+            margin: auto;
+            position: relative;
+            width: 100%;
+            height: 100%;
+            object-fit: contain;
+        }
+
+    }
+
+    .post-card__big__gallery__img__source {
+        object-fit: contain;
+        width: 70%;
+        height: 70%;
+        margin: auto;
+        // object-fit: cover;
+
+        &._cover {
+            // aspect-ratio: 1 / 1;
+            // object-fit: cover;
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+    }
 }
 
 // @media screen and (max-width: 767px) {
@@ -333,9 +406,11 @@
             bottom: .5rem !important;
         }
     }
-    .post-card__big__content__wrapper{
-        padding: 1.5rem ;
+
+    .post-card__big__content__wrapper {
+        padding: 1.5rem;
     }
+
     .post-card__big__gallery__img__source {
         // aspect-ratio: 1/1;
 
@@ -353,6 +428,7 @@
 
     .post-card__big__gallery {
         padding: 5px;
+
         .f-carousel__dots {
             margin: .1rem auto !important;
         }
@@ -363,10 +439,6 @@
     }
 }
 
-@media screen and (max-width: 767px) {
-   
-}
+@media screen and (max-width: 767px) {}
 
-@media screen and (max-width: 600px) {
-   
-}
+@media screen and (max-width: 600px) {}
