--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -18,7 +18,7 @@
     overflow: hidden;
 
     padding: 5px;
-    box-shadow: 0px -13px 20px #00000059;
+    box-shadow: 0px -10px 20px rgb(0 0 0 / 37%);
 }
 
 
