--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -325,19 +325,19 @@
     .f-thumbs {
         position: absolute;
         left: 1.5rem;
-        bottom: 1.5rem;
+        bottom: .6rem;
         width: 100%;
 
         &.is-horizontal {
 
             .f-thumbs__track {
-                padding: 0;
+                // padding: 0;
             }
         }
 
         .f-thumbs__track {
             // flex-direction: column;
-            padding: 0;
+            // padding: 0;
         }
 
         .f-thumbs__slide {
