--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -150,10 +150,6 @@ div {
 
 
 
-.main-padding {
-    padding-left: calc(2.5 * var(--padding));
-    padding-right: calc(2.5 * var(--padding));
-}
 
 .grid_12 {
     display: grid;
@@ -168,6 +164,11 @@ div {
         padding-left: var(--padding);
         padding-right: var(--padding);
     }
+}
+
+.main-padding {
+    padding-left: calc(2.5 * var(--padding));
+    padding-right: calc(2.5 * var(--padding));
 }
 
 // Галерея
@@ -468,7 +469,7 @@ footer {
     font-weight: 600;
     color: #fff;
     gap: 1rem;
-    margin-bottom: 5rem;
+    margin-bottom: 2.5rem;
 
 
     max-width: 700px;
@@ -507,19 +508,21 @@ footer {
         padding: 0;
     }
 
-}
-
-@media screen and (max-width: 1024px) {
     .main-padding {
         padding-left: var(--padding);
         padding-right: var(--padding);
     }
+}
 
-    section, footer {
+@media screen and (max-width: 1024px) {
+
+    section,
+    footer {
         padding-top: 5rem;
         padding-bottom: 5rem;
     }
-    .section__heading{
+
+    .section__heading {
         margin-bottom: 3rem;
     }
 }
@@ -546,5 +549,5 @@ footer {
         visibility: hidden;
     }
 }
-@media screen and (max-width: 480px) {
-}
+
+@media screen and (max-width: 480px) {}
