--- a/blocks/section__post-list__archive_gallery/_index.scss
+++ b/blocks/section__post-list__archive_gallery/_index.scss
@@ -1,58 +1,74 @@
 .posts-list__archive-gallery {
-    display: grid;
-    // grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-    grid-template-columns: repeat(3, 1fr);
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    align-items: baseline;
     gap: 2rem;
     row-gap: 5rem;
 
     .post-card {
         transition: all .5s;
 
-        .post-card__heading,
-        .post-card__category {
-            transition: all .5s;
+        &:hover {
+            opacity: .8;
         }
 
-        &:hover {
-            transform: scale(1.05);
-            z-index: 5;
-            background-color: #0a0a0a;
-            /* border: 1px solid #212121; */
-            border-radius: 13px;
-            overflow: visible;
-            /* overflow: hidden; */
-            padding: 5px;
-            box-shadow: 0px 5px 18px #0f0f0fdb;
+        &:nth-child(1) {
+            width: 58%;
+        }
 
-            .post-card__content,
-            .post-card__heading,
-            .post-card__category {
-                // opacity: .5;
-                color: var(--color-secondary);
+        &:nth-child(2) {
+            width: 38%;
+        }
 
-                a {}
-            }
+        &:nth-child(3) {
+            width: 38%;
+        }
+
+        &:nth-child(4) {
+            width: 48%;
+        }
+
+        &:nth-child(5) {
+            width: 50%;
+        }
+
+        &:nth-child(6) {
+            width: 40%;
+        }
+
+        &:nth-child(7) {
+            width: 58%;
+        }
+
+        &:nth-child(8) {
+            width: 38%;
+        }
+        &:nth-child(9) {
+            width: 38%;
+        }
+        &:nth-child(10) {
+            width: 48%;
+        }
+        &:nth-child(11) {
+            width: 50%;
+        }
+        &:nth-child(12) {
+            width: 40%;
+        }
+        &:nth-child(13) {
+            width: 58%;
         }
     }
 }
 
-@media screen and (max-width: 1600px) {
-    
-}
+@media screen and (max-width: 1600px) {}
 
-@media screen and (max-width: 1220px) {
+@media screen and (max-width: 1220px) {}
 
-}
 @media screen and (max-width: 1024px) {
-.posts-list__archive-gallery{
-    grid-template-columns: repeat(2, 1fr);
-
-}
 }
 
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 767px) {}
 
-}
-@media screen and (max-width: 480px) {
-    
-}
+@media screen and (max-width: 480px) {}
