--- a/components/footer/footer.scss
+++ b/components/footer/footer.scss
@@ -5,6 +5,7 @@
     transition-property: all;
     transition-duration: .5s;
     position: relative;
+    // height: 100vh;
 
     &._hide {
         transform: translateY(-30%) scale(0.9);
@@ -60,6 +61,8 @@
     flex-wrap: wrap;
     gap: 3rem;
     position: relative;
+    height: 100%;
+    justify-content: space-between;
 
     &::after {
         content: '';
