--- a/components/header/header.scss
+++ b/components/header/header.scss
@@ -259,6 +259,13 @@
     .header__navigation {
         display: none;
     }
+
+    .header__top{
+        padding: 1.5rem calc( var(--padding));
+    }
+    .header__burger__menu .header__burger__links a{
+        padding: var(--padding) var(--padding);
+    }
 }
 
 @media screen and (max-width: 1024px) {
