--- a/blocks/section__post-list__big/_index.scss
+++ b/blocks/section__post-list__big/_index.scss
@@ -23,7 +23,7 @@
 
     grid-column: 3/13;
     grid-row: 2/3;
-    padding: 0 calc(2.5 * var(--padding));
+    padding: 0 var(--padding);
 
 }
 
@@ -38,7 +38,7 @@
 
     .custom-card {
         position: absolute;
-        width: calc(100% - calc(2 * 2.5 * var(--padding)));
+        width: calc(100% - calc(2 * var(--padding)));
         top: 0px;
         height: auto;
         height: calc(96vh - 10rem);
