--- a/blocks/section__welcome-block/_index.scss
+++ b/blocks/section__welcome-block/_index.scss
@@ -8,17 +8,33 @@
     justify-content: space-between;
     padding-bottom: 3rem;
     align-items: flex-end;
+
+    &::before {
+        content: '';
+        position: absolute;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background:
+            // linear-gradient(360deg, #000 0%, rgba(0, 0, 0, 0) 35%), 
+            linear-gradient(30deg, #000 0%, rgba(0, 0, 0, 0) 20%),
+            linear-gradient(330deg, #000 0%, rgba(0, 0, 0, 0) 30%),
+            linear-gradient(30deg, #000 0%, rgba(0, 0, 0, 0) 60%),
+            linear-gradient(330deg, #000 0%, rgba(0, 0, 0, 0) 60%);
+        z-index: 5;
+        pointer-events: none;
+    }
 }
 
 .section__welcome-block__content {
     grid-column: 1/12;
     height: fit-content;
-    align-items: center;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    align-items: flex-end;
     gap: 1rem;
     justify-content: flex-end;
-    align-items: start;
     height: 100%;
     position: relative;
     z-index: 5;
@@ -28,14 +44,15 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    padding-right: var(--padding);
+    padding-right: calc(2.5 * var(--padding));
     gap: .5rem;
     z-index: 5;
 }
 
 .welcome-block__text,
 .welcome-block__text * {
-    font-size: calc(1.5 * var(--font-size-5));
+    // font-size: calc(1.5 * var(--font-size-5));
+    font-size: 11.5vw;
     line-height: 90%;
     font-weight: var(--font-weight-regular);
     font-weight: 600;
@@ -45,10 +62,11 @@
 .welcome-block__caption * {
     color: var(--color-text-gray);
     color: #fff;
-    font-size: var(--font-size-2);
+    font-size: var(--font-size-1);
+    // font-size: 1.5vw;
     line-height: 110%;
-    font-weight: var(--font-weight-regular);
-    font-weight: 400;
+    font-weight: 500;
+    margin-bottom: .4vw;
 }
 
 .welcome-block__image {
@@ -56,7 +74,7 @@
     width: 100vw;
     height: 100vh;
     z-index: 0;
-    // mask: linear-gradient(90deg, rgba(0, 0, 0, 0) 10.41138795045045%, rgba(0, 0, 0, 1) 93.1447072072072%) add;
+    // mask: linear-gradient(90deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 20%) add;
 }
 
 .welcome-block__image__source {
@@ -154,7 +172,7 @@
     top: 0;
     left: 0;
     // mask: linear-gradient(0deg, rgba(0, 0, 0, 0) 10.41138795045045%, rgba(0, 0, 0, 1) 93.1447072072072%) add;
-    mask: linear-gradient(0deg, rgba(0, 0, 0, 0) 10%, rgba(0, 0, 0, 1) 190%) add;
+    mask: linear-gradient(0deg, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 1) 20%) add;
 
     ~svg {
         display: none;
