--- a/components/footer/footer.scss
+++ b/components/footer/footer.scss
@@ -6,6 +6,7 @@
     transition-duration: .5s;
     position: relative;
     // height: 100vh;
+    background-color: var(--color-primary);
 
     &._hide {
         transform: translateY(-30%) scale(0.9);
