--- a/components/post-card/post-card__big/post-card__big.scss
+++ b/components/post-card/post-card__big/post-card__big.scss
@@ -8,7 +8,7 @@
     overflow: hidden;
 
     background-color: var(--color-primary);
-    background-color: #0a0a0a;
+    // background-color: #0a0a0a;
 
 
     // border-top: 1px solid var(--color-gray-dark);
@@ -18,7 +18,7 @@
     overflow: hidden;
 
     padding: 5px;
-    box-shadow: 0px -10px 20px rgb(0 0 0 / 37%);
+    // box-shadow: 0px -10px 20px rgb(0 0 0 / 37%);
 
     display: grid;
     grid-template-columns: 3fr 1fr;
@@ -30,26 +30,28 @@
 
 
 .post-card__big__content__wrapper {
-    display: flex;
-    align-items: flex-start;
-    justify-content: space-between;
-    flex-direction: column;
+    // display: flex;
+    // align-items: flex-start;
+    // justify-content: space-between;
+    // flex-direction: column;
     // grid-column: 9 / 13;
-    position: relative;
+    position: absolute;
     z-index: 10;
     padding: var(--padding);
     gap: 1rem;
-    background-color: var(--color-background-card);
+    // background-color: var(--color-background-card);
     // height: fit-content;
     height: 100%;
     // border-radius: 1rem;
-    // pointer-events: none;
+    pointer-events: none;
 
-    width: 30%;
+    width: 100%;
+
+
 }
 
 .post-card__big__content {
-    display: flex;
+    display: grid;
     // align-items: flex-start;
     // justify-content: flex-start;
     flex-direction: column;
@@ -70,7 +72,7 @@
     gap: 10px;
 
     grid-column: 1/2;
-    grid-row: 2/3;
+    grid-row: 1/2;
 }
 
 .post-card__big__heading {
@@ -81,6 +83,8 @@
 
     grid-column: 1/2;
     grid-row: 1/1;
+
+    color: var(--color-primary);
 
     &._mobile {
         padding: var(--padding);
@@ -94,7 +98,9 @@
     // overflow: hidden;
     grid-column: 1/2;
     grid-row: 1/2;
-    // margin-top: 2rem;
+    color: var(--color-primary);
+
+    margin-top: 2rem;
 
     * {
         // color: var(--color-text-primary);
@@ -104,18 +110,15 @@
 
 .post-card__big__meta {
     display: flex;
-    align-items: flex-start;
+    align-items: flex-end;
     justify-content: flex-start;
     flex-direction: column;
-    // gap: 1rem;
     width: 100%;
-
-    grid-row: 1/2;
-    grid-column: 1/4;
-
+    grid-row: 1 / 2;
+    grid-column: 3 / 4;
     text-align: left;
-
-    opacity: .5;
+    // opacity: 0.5;
+    height: -moz-fit-content;
     height: fit-content;
 }
 
@@ -123,13 +126,16 @@
 
     display: flex;
     flex-direction: row;
-
-    border-top: 1px solid var(--color-gray-dark);
-    padding: .7rem 0px;
+    padding: 0.3rem 0px;
+    width: -moz-fit-content;
     width: fit-content;
     position: relative;
     width: 100%;
+    justify-content: flex-end;
+    text-align: right;
 
+    color: var(--color-primary);
+opacity: 1;
     * {
         font-size: var(--font-size--1);
     }
@@ -143,13 +149,17 @@
 }
 
 .post-card__big__meta__item__variable {
-    // display: none;
+    display: none;
+
     color: var(--color-secondary);
     width: 30%;
     margin-right: 1rem;
 }
-.post-card__big__meta__item__value{
-    width: 70%;
+
+.post-card__big__meta__item__value {
+    // width: 70%;
+    color: var(--color-primary);
+
 }
 
 .post-card__meta__team {
@@ -160,7 +170,7 @@
     gap: 8px;
     position: relative;
 
-    // display: none;
+    display: none;
 }
 
 .post-card__meta__team__images__wrapper {
@@ -228,6 +238,9 @@
     display: flex;
     flex-direction: row;
 
+
+    display: none;
+
     a {
         width: 100%;
     }
@@ -250,7 +263,8 @@
     right: 50%;
     left: 50%;
 
-    background-color: rgb(18 23 47 / 23%);
+    background-color: rgba(18, 23, 47, 0.399);
+    background: linear-gradient(180deg, #c9c7c2 0%, #a7a6a5 100%);
     // transform: scale(1.2) translate(-50%, -50%);
     transform: translate(-50%, -50%);
     // mask: linear-gradient(260deg, rgba(0, 0, 0, 0) 10.41138795045045%, rgba(0, 0, 0, 1) 93.1447072072072%) add;
@@ -276,7 +290,7 @@
     position: relative;
     // position: absolute;
     width: 100%;
-    width: 70%;
+    // width: 70%;
     height: 100%;
     // grid-column: 1 / 9;
     z-index: 5;
@@ -305,6 +319,7 @@
     .f-button {
         top: auto !important;
         bottom: 1rem;
+        bottom: 3.2rem;
         // bottom: calc(16px + 1.5rem);
 
         // transform: translateY(128%) !important;
