--- a/blocks/contacts/_index.scss
+++ b/blocks/contacts/_index.scss
@@ -1,30 +1,30 @@
 .contacts-block {
-    padding-top: 2.5rem;
-    padding-bottom: 2.5rem;
+    display: flex;
+    flex-direction: row;
 }
 
-.contacts-block__top {
-    grid-column: 1/9;
-    grid-row: 1/2;
-
+.contacts-block__content {
     display: flex;
     flex-direction: column;
     gap: .5rem;
+
+    width: 50%;
+    padding-right: 15%;
 }
 
-.contacts-block__description,
-.contacts-block__description * {
-    color: var(--color-text-gray);
+.contacts-block__description {
+    margin-top: 1rem;
+    * {
+        color: var(--color-text-gray);
+    }
 }
 
 .contacts-block__links {
-    grid-column: 1/9;
-    grid-row: 3/4;
+    margin-top: 2.5rem;
 }
 
 .contacts-block__image {
-    grid-column: 9/13;
-    grid-row: 1/4;
+    width: 50%;
 }
 
 .contacts-block__image__source {
@@ -102,7 +102,7 @@
         grid-column: 1/13;
         grid-row: 1/2;
     }
-    
+
     .contacts-block__links {
         grid-column: 1/13;
         grid-row: 2/3;
