--- a/blocks/section__post-list__big/_index.scss
+++ b/blocks/section__post-list__big/_index.scss
@@ -34,31 +34,30 @@
     justify-content: center;
     align-items: center;
     height: 70vh;
-    margin-bottom: 90px;
+    // margin-bottom: 90px;
 
     .custom-card {
         position: absolute;
         width: calc(100% - calc(2 * var(--padding)));
         top: 0px;
-        height: auto;
-        height: calc(96vh - 10rem);
+        height: calc(98vh - 10rem);
 
-        margin-bottom: 50px;
+        // margin-bottom: 50px;
     }
 
-    .card1 {
-        top: 1rem;
-    }
-
-    .card2 {
-        top: 1rem;
-    }
-
+    .card1,
+    .card2,
     .card3 {
-        top: 1rem;
+        top: 0;
     }
 
+    // .card2 {
+    //     top: .5rem;
+    // }
 
+    // .card3 {
+    //     top: .5rem;
+    // }
 }
 
 
