--- a/components/post-card/post-card.scss
+++ b/components/post-card/post-card.scss
@@ -11,7 +11,7 @@
     position: relative;
     width: 100%;
     height: 100%;
-    
+
     .post-card__thumb__source {
         object-fit: cover;
         width: 100%;
@@ -25,10 +25,12 @@
     display: flex;
     flex-direction: column;
     gap: 5px;
-    margin-top: 10px;
+    margin-top: 1rem;
 }
 
 .post-card__category {
+    margin-top: .2rem;
+
     a {
         color: var(--color-secondary);
         text-decoration: none;
