--- a/blocks/experience/_index.scss
+++ b/blocks/experience/_index.scss
@@ -41,8 +41,9 @@
     flex-direction: column;
     width: 100%;
     display: grid;
-    grid-template-columns: 25% 25% 50% ;
+    grid-template-columns: 25% 25% 44% ;
     padding-bottom: 3rem;
+    gap: 1rem;
 }
 
 .experience-item__title {
